Set up HTML bookshelf on homepage

--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>Ice's Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- 
     <p>Hello i am iciclestars</p>
     <img src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUydnJpOXRxY2N2NHZuaWQwcjFlaHBrZnR6cGlqcDYzdTM1M2g5c3JzayZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/KrR3B1YUWW2jnvgeEa/giphy-preview.gif" alt="Aphelios">
     <source src="https://downloads.khinsider.com/game-soundtracks/album/minecraft-parody-songs-2009/01.%2520Don%2527t%2520Mine%2520at%2520Night.mp3" type="audio/mpeg">
 
-    <script src="script.js"></script>
-    
-    
+    <script src="script.js"></script> 
+    -->
+
+    <!-- Photo Frame for picture of me -->
+    <div class="frame"></div>
+
+    <!-- Bookshelf -->
+     <div class="bookshelf"> 
+
+        <div class="book"><span>Book 1</span></div>
+        <div class="book-interactive"><span>Book 2</span></div>
+        <div class="book-interactive"><span>Book 3</span></div>
+        <div class="book"><span>Book 4</span></div>
+
+     </div>
 
 </body>
 
