Create sample Frame and Bookshelf w/ books

--- a/index.html
+++ b/index.html
@@ -21,13 +21,23 @@
     <div class="frame"></div>
 
     <!-- Bookshelf -->
-     <div class="bookshelf"> 
+    <div class="bookshelf"> 
 
-        <div class="book"><span>Book 1</span></div>
-        <div class="book-interactive"><span>Book 2</span></div>
-        <div class="book-interactive"><span>Book 3</span></div>
-        <div class="book"><span>Book 4</span></div>
+        <div class="book short" style="background: lightblue;"><span></span></div>
+        <div class="book medium interactive" style="background: linear-gradient(to right, black, white);"><span>Title</span></div>
+        <div class="book tall interactive" style="background: linear-gradient(to right, red, green);"><span>Title</span></div>
+        <div class="book medium" style="background: lightgreen;"><span></span></div>
 
+    </div>
+
+    <!-- Content of interactive books -->
+     <div id="about me" class="content"> 
+        <h2>About Me</h2>
+        <p>hi hi hi hi hi</p>
+     </div>
+     <div id="temporary" class="content">
+        <h2>Temporary Title</h2>
+        <img src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUydnJpOXRxY2N2NHZuaWQwcjFlaHBrZnR6cGlqcDYzdTM1M2g5c3JzayZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/KrR3B1YUWW2jnvgeEa/giphy-preview.gif" alt="Aphelios">
      </div>
 
 </body>
